// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage It should render the component correctly with the custom image 1`] = `
<DocumentFragment>
  <img
    alt="Product"
    class="productImg custom-class"
    src="https://example.com/image.jpg"
  />
</DocumentFragment>
`;

exports[`ProductImage should be show the component with the product image 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product"
      class="productImg custom-class"
      src="https://example.com/image.jpg"
    />
  </div>
</DocumentFragment>
`;
